[package]
name = "apollo-music"
version = "0.1.0"
edition = "2024"

[dependencies]
"rusqlite" = "0.36.0"
"walkdir" = "2.3.2"
"shellexpand" = "3.1.1"
"lofty" = "0.22.4"
clap = { version = "4.2.7", features = ["derive"] }
config = {version = "0.15.11", features = ["yaml"]}
"serde" = { version = "1.0.188", features = ["derive"] }
"strsim" = "0.11.1"
"inquire" = "0.7.4"
"colored" = "3.0.0"
"csv" = "1.3.1"
fs_extra = "1.2.0"
human_bytes = "0.4.3"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav"] }
indicatif = "0.17.11"
rodio = { version = "0.20.1", features = ["default", "mp3", "flac", "wav"] }
mpd = { version = "0.1.0"}

[[bin]]
name = "apollo"
path = "main.rs"
