[package]
name = "apollo-music"
version = "0.1.0"
edition = "2024"

[dependencies]
"rusqlite" = "0.36.0"
"walkdir" = "2.3.2"
"shellexpand" = "3.1.1"
"lofty" = "0.22.4"
clap = { version = "4.2.7", features = ["derive"] }
config = {version = "0.15.11", features = ["toml"]}
"serde" = { version = "1.0.188", features = ["derive"] }
"strsim" = "0.11.1"
"inquire" = "0.7.4"
"colored" = "3.0.0"
"csv" = "1.3.1"
fs_extra = "1.2.0"
human_bytes = "0.4.3"
indicatif = "0.17.11"
globset = "0.4"

[[bin]]
name = "apollo"
path = "main.rs"

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable Link Time Optimization (speed + size)
codegen-units = 1   # Better optimization (slower compile)
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing unwinding
