[package]
name = "apollo-music"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = "0.36.0"
walkdir = "2.3.2"
lofty = "0.22.4"
clap = { version = "4.2.7", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"] }
serde = { version = "1.0.188", features = ["derive"] }
strsim = "0.11.1"
inquire = "0.7.4"
indicatif = "0.17.11"
globset = "0.4"
rayon = "1.10"
num_cpus = "1.16"

[[bin]]
name = "apollo"
path = "main.rs"

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Enable Link Time Optimization (speed + size)
codegen-units = 1   # Better optimization (slower compile)
strip = true        # Strip symbols from binary
panic = "abort"     # Reduce binary size by removing unwinding
